[package]
name = "async-arp"
version = "0.3.1"
edition = "2021"

authors =["Adrian Skulimowski"]
description = "An async ARP client library for probing hosts and sending advanced ARP requests."
repository = "https://github.com/skullim/async-arp"
license = "MIT/Apache-2.0"
keywords = ["arp", "async", "network", "protocol", "client"]
categories = ["network-programming"]

exclude = [".circleci/"]

[dependencies]
afpacket = {version = "0.2.3", features = ["async-tokio"]}
futures = "0.3.31"
log = "0.4.25"
pnet = "0.35.0"
thiserror = "2.0.11"
timedmap = "1.0.2"
tokio = {version = "1.43.0", features = ["io-util", "time", "rt", "macros", "sync"]}
tokio-util = "0.7.13"

[dev-dependencies]
clap = { version = "4.5.28", features = ["derive"] }
ipnet = "2.11.0"
tokio-test = "0.4.4"
